--- a/.env
+++ b/.env
@@ -25,7 +25,9 @@ APP_SECRET=d9922cee474a5dfccd5c6ea6805151ff
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+DATABASE_URL=mysql://root:sa@127.0.0.1:3306/contactos
+
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
